--- a/index.html
+++ b/index.html
@@ -39,11 +39,19 @@
                 <ul class="contacts list">
                     <li class="contacts-item item">
                         <!-- Поштова скринька -->
-                        <a class="contacts-ref link " href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contacts-ref link " href="mailto:info@devstudio.com"> 
+                            <svg class="icon-contacts" width="16" height="12">
+                            <use href="./images/sprite/sprite.svg#icon-envelope">
+                            </use>
+                        </svg> info@devstudio.com</a>
                     </li>
                     <li class="contacts-item">
                         <!-- Телефонний номер -->
-                        <a class="contacts-ref link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="contacts-ref link" href="tel:+380961111111">
+                            <svg class="icon-contacts" width="10" height="16">
+                            <use href="./images/sprite/sprite.svg#icon-smartphone">
+                            </use>
+                        </svg>+38 096 111 11 11</a>
                     </li>
                 </ul>
            
