Добавляє іконки секції "Особенности"

--- a/index.html
+++ b/index.html
@@ -77,18 +77,42 @@
                 <h2 class="hidden-title">Наши особенности</h2>
                 <ul class="features-list list">
                     <li class="features-items">
+                        <div class="features-container">
+                            <svg class="features-icon" width="70" height="70">
+                                <use href="./images/sprite/sprite.svg#icon-antenna">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="features-item">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="features-items">
+                        <div class="features-container">
+                            <svg class="features-icon" width="70" height="70">
+                                <use href="./images/sprite/sprite.svg#icon-clock">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="features-title">Пунктуальность</h3>
                         <p class="features-item">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="features-items">
+                        <div class="features-container">
+                            <svg class="features-icon" width="70" height="70">
+                                <use href="./images/sprite/sprite.svg#icon-diagram">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="features-title">Планирование</h3>
                         <p class="features-item">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="features-items">
+                        <div class="features-container">
+                            <svg class="features-icon" width="70" height="70">
+                                <use href="./images/sprite/sprite.svg#icon-astronaut">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="features-title">Современные технологии</h3>
                         <p class="features-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
