--- a/index.html
+++ b/index.html
@@ -309,6 +309,64 @@
                 </ul>
            </div>
         </section>
+
+        <!-- Секція"Постоянные клиенты" -->
+        <section class="clients section">
+            <div class="container">
+                <h2 class="clients-title">Постоянные клиенты</h2>
+                <ul class="clients-list list">
+                    <li class="clients-item">
+                        <a class="clients-ref link" href="#">
+                            <svg class="clients-icon" width="41" height="47">
+                                <use href="./images/sprite/sprite.svg#icon-client1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-ref link" href="#">
+                            <svg class="clients-icon" width="40" height="52">
+                                <use href="./images/sprite/sprite.svg#icon-client2">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-ref link" href="#">
+                            <svg class="clients-icon" width="44" height="41">
+                                <use href="./images/sprite/sprite.svg#icon-client3">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-ref link" href="#">
+                            <svg class="clients-icon" width="85" height="41">
+                                <use href="./images/sprite/sprite.svg#icon-client4">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-ref link" href="#">
+                            <svg class="clients-icon" width="63" height="46">
+                                <use href="./images/sprite/sprite.svg#icon-client5">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-ref link" href="#">
+                            <svg class="clients-icon" width="94" height="44">
+                                <use href="./images/sprite/sprite.svg#icon-client6">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        
     </main>
 
     <!--Підвал-->
