--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,19 @@
             <ul class="contacts list">
                 <li class="contacts-item item">
                     <!-- Поштова скринька -->
-                    <a class="contacts-ref link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contacts-ref link " href="mailto:info@devstudio.com">
+                        <svg class="icon-contacts" width="16" height="12">
+                            <use href="./images/sprite/sprite.svg#icon-envelope">
+                            </use>
+                        </svg> info@devstudio.com</a>
                 </li>
                 <li class="contacts-item">
                     <!-- Телефонний номер -->
-                    <a class="contacts-ref link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contacts-ref link" href="tel:+380961111111">
+                        <svg class="icon-contacts" width="10" height="16">
+                            <use href="./images/sprite/sprite.svg#icon-smartphone">
+                            </use>
+                        </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
        </div>
@@ -168,26 +176,66 @@
 
     <!--Підвал-->
     <footer class="footer section">
-        <div class="container">
-            <!-- Логотип сайту -->
-            <a class="footer-logo link" lang="en" href="./index.html"><span class="logo-item">Web</span>Studio</a>
-            <!-- Контакти -->
-            <address class="footer-contacts">
-                <ul class="footer-list list">
-                    <li class="footer-item">
-                        <a class="footer-ref link look " href="https://goo.gl/maps/9nW52qTycUzczm9EA" target="_blank"
-                            rel="noreferrer noopener">г. Киев, пр-т
-                            Леси Украинки,
-                            26</a>
+        <div class="container footer-container">
+            <div class="footer-logo-container">
+                <!-- Логотип сайту -->
+                <a class="footer-logo link" lang="en" href="./index.html"><span class="logo-item">Web</span>Studio</a>
+                <!-- Контакти -->
+                <address class="footer-contacts">
+                    <ul class="footer-list list">
+                        <li class="footer-item">
+                            <a class="footer-ref link look " href="https://goo.gl/maps/9nW52qTycUzczm9EA" target="_blank"
+                                rel="noreferrer noopener">г. Киев, пр-т
+                                Леси Украинки,
+                                26</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-ref link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-ref link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social-container">
+                <p class="footer-name">присоединяйтесь</p>
+                <ul class="footer-social-list list">
+                    <li class="footer-social-items">
+                        <a class="footer-social-ref" href="#">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/sprite/sprite.svg#icon-instagram">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-item">
-                        <a class="footer-ref link" href="mailto:info@example.com">info@example.com</a>
+                    <li class="footer-social-items">
+                        <a class="footer-social-ref" href="#">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/sprite/sprite.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-item">
-                        <a class="footer-ref link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="footer-social-items">
+                        <a class="footer-social-ref" href="#">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/sprite/sprite.svg#icon-facebook">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
+                    <li class="footer-social-items">
+                        <a class="footer-social-ref" href="#">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/sprite/sprite.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+    
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 
